# tingbok

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: clean_skos_cache.py  clean_vocabulary.py  merge_ean_db.py  migrate-ean-cache.py
src/tingbok/: __init__.py  app.py  cli.py  models.py
src/tingbok/data/: ean-db.json  ean-db.yaml  vocabulary.yaml
src/tingbok/routers/: ean.py  skos.py
src/tingbok/services/: ean.py  gpt.py  off.py  skos.py
tests/: conftest.py  test_app.py  test_cli.py  test_ean.py  test_gpt.py  test_off.py  test_skos.py
